[package]
name = "bearable"
version = "0.1.0"
authors = ["Ana Hobden <operator@hoverbear.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tera = "1"
csv = "1"
glob = "0.3"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.8.11"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = "0.2"
clap = "2.33.0"
chrono = { version = "0.4.11", features = ["serde"] }
console = "0.10.0"
dialoguer = "0.5.0"
indicatif = "0.14.0"